<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="#00B28C"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btnPay"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pressed_style"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:text="@string/_pay"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:text="@string/listview_checkbox"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnAdd"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pressed_style"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:text="@string/_add"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="#ECEFF0">

        <ListView
            android:id="@+id/lvListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#DADBDA"
            android:dividerHeight="1px"
            android:fadingEdge="none"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DADBDA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#0BA683"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pressed_style"
            android:text="@string/_delete"
            android:textColor="#FDFEFE"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DADBDA" />

        <Button
            android:id="@+id/btnSelectAll"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pressed_style"
            android:text="@string/_allselect"
            android:textColor="#FDFEFE"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>